# streamdeck-ram

./: CMakeLists.txt  LICENSE  README.md  Readme.md  package-lock.json  package.json
art/: gallaryImages.afdesign  memoryUsageKeyIcon.afdesign
cmake/: StreamDeckDeploy.cmake
design/: categoryIcon.afdesign  gallaryImages.afdesign  gallaryImages.afdesign~lock~  memoryUsageActionIcon.afdesign  memoryUsageKeyIcon.afdesign  pluginIcon.afdesign
resources/: en.json  manifest.json
sdPlugin/: CMakeLists.txt  en.json.in  manifest.in  manifest.json.in  usagePropertyInspector.html
src/: CMakeLists.txt  PlatformUtils.h  Plugin.cpp  Plugin.h  StreamDeckPlugin.cpp  StreamDeckPlugin.h  ThreadTimer.cpp  ThreadTimer.h  UsageAction.cpp  UsageAction.h  main.cpp
src/mac/: MacPlatformUtils.cpp  MacPlatformUtils.h
src/win/: WinPlatformUtils.cpp  WinPlatformUtils.h
